# dataviz-uit

./: .gitignore  ALGORITHM_VISUALIZATION_IMPLEMENTATION.md  ALL_ALGORITHMS_ANIMATED.md  ANIMATION_SYSTEM_COMPLETE.md  ANIMATION_SYSTEM_FIX.md  ARCHITECTURE_DIAGRAM.md  AUTO_SAVE_SESSION_FEATURE.md  BINARY_TREE_STATE_PRESERVATION_FIX.md  BINARY_TREE_VALUE_MIXING_FIX.md  BUILD_FIXES.md  BUILD_FIX_CHECKLIST.md  BUILD_FIX_SUMMARY.md  C++ Data Structure Visualization App.txt  CANVAS_CLEARING_FIX.md  CLEANUP_COMPLETED.md  CLEANUP_FINAL_SUMMARY.md  CMAKE_PORTABILITY_FIX.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json.example  CODE_GENERATOR_EXAMPLES.md  CODE_GENERATOR_GUIDE.md  CODE_GENERATOR_IMPLEMENTATION.md  CODE_GENERATOR_QUICKREF.md  COLOR_LEGEND_GUIDE.md  COLOR_LEGEND_REDESIGN.md  COLOR_QUICK_REFERENCE.md  COMPLETE_ANIMATION_WITH_VALUES.md  COMPLETE_SYSTEM_FINAL_SUMMARY.md  COMPLETE_USER_GUIDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Directory.Build.props  FEATURE_COMPLETE.md  FILES_CREATED.md  FINAL_ANIMATION_TEST.md  FINAL_REPORT.md  IMPLEMENTATION_GUIDE.md  (+49 more)
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
dataviz-uit.dir/Release/: dataviz-uit.exe.recipe
dataviz-uit.dir/Release/dataviz-uit.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
dataviz-uit_autogen/: mocs_compilation_Release.cpp
docs/: C2V_COORDINATION.md  C2V_DEVELOPER_1_FRONTEND.md  C2V_DEVELOPER_2_BACKEND.md  C2V_GUIDE.md  COMPLETE_DELIVERY_SUMMARY.md  COMPLETION_REPORT.md  DOCUMENTATION_SUMMARY.md  FILE_MANIFEST.md  FINAL_DELIVERY_COMPLETE.md  FINAL_SUMMARY.md  GANTT_AND_SCHEDULES.md  GLOBAL_COORDINATION.md  GO_BUILD.md  INDEX.md  PARALLEL_EXECUTION_SUMMARY.md  PARALLEL_STRATEGY_PACKAGE.md  PARALLEL_TASK_PLANNING.md  QUICK_REFERENCE.md  README_PARALLEL_TASKS.md  TASK_DEPENDENCY_MATRIX.md  UI_COORDINATION.md  UI_DEVELOPER_1_RENDERING.md  UI_DEVELOPER_2_FRAMEWORK.md  UI_GUIDE.md  V2C_GUIDE.md  V2C_MEMBER_1_CODE_GENERATION.md  V2C_MEMBER_2_SOURCE_INTEGRATION.md  V2C_TEAM_COORDINATION.md
src/: main.cpp
src/algorithms/: algorithm_runner.cpp  algorithm_runner.h  bfs_runner.cpp  bfs_runner.h  bubble_sort.cpp  bubble_sort.h  dfs_runner.cpp  dfs_runner.h  dijkstra_runner.cpp  dijkstra_runner.h  execution_state.cpp  execution_state.h  frame_recorder.cpp  frame_recorder.h  graph_algorithms.cpp  graph_algorithms.h  graph_detect_cycle.h  graph_topological_sort.h  inorder_runner.cpp  inorder_runner.h  insertion_sort.h  map_transform.h  merge_sort.cpp  merge_sort.h  normalize.cpp  normalize.h  postorder_runner.cpp  postorder_runner.h  preorder_runner.cpp  preorder_runner.h  quick_sort.cpp  quick_sort.h  range_filter.cpp  range_filter.h  remove_duplicates.h  reverse.h  selection_sort.h  tree_find_height.h  tree_find_max.h  tree_find_min.h  (+4 more)
src/analysis/: CMakeLists.txt
src/analysis/clang_integration/: ast_parser.cpp  ast_parser.h  structure_extractor.cpp  structure_extractor.h
src/analysis/instrumentation/: llvm_instrumentation.cpp  llvm_instrumentation.h
src/analysis/state_mapping/: execution_logger.cpp  execution_logger.h  state_mapper.cpp  state_mapper.h
src/codegen/: code_structure_parser.cpp  code_structure_parser.h  structure_code_generator.cpp  structure_code_generator.h
src/core/: CMakeLists.txt  algorithm_info.h  array_structure.cpp  array_structure.h  data_model_manager.cpp  data_model_manager.h  data_structure.h  graph.cpp  graph.h  graph_structure.cpp  graph_structure.h  list_node.cpp  list_node.h  list_structure.cpp  list_structure.h  session_manager.cpp  session_manager.h  tree_node.cpp  tree_node.h  tree_structure.cpp  tree_structure.h
src/core/data_structures/: graph.cpp  graph.h  tree.cpp  tree.h
src/core/serialization/: dot_serializer.cpp  dot_serializer.h  json_serializer.cpp  json_serializer.h
src/core/utilities/: logger.cpp  logger.h  timer.cpp  timer.h
src/frontend/: CMakeLists.txt
src/frontend/ui/: code_editor.cpp  code_editor.h  control_panel.cpp  control_panel.h  diagnostic_output.cpp  diagnostic_output.h  main_window.cpp  main_window.h  memory_viewer.cpp  memory_viewer.h  visualization_pane.cpp  visualization_pane.h
src/orchestration/: algorithm.h  algorithm_factory.h  algorithm_manager.cpp  algorithm_manager.h  filtering_algorithm_factory.cpp  filtering_algorithm_factory.h  graph_algorithm_factory.cpp  graph_algorithm_factory.h  sorting_algorithm_factory.cpp  sorting_algorithm_factory.h  transform_algorithm_factory.cpp  transform_algorithm_factory.h  tree_algorithm_factory.cpp  tree_algorithm_factory.h
src/synthesis/: CMakeLists.txt
src/synthesis/api_mapping/: api_mapper.cpp  api_mapper.h
src/synthesis/code_generation/: ast_generator.cpp  ast_generator.h  clang_rewriter.cpp  clang_rewriter.h  code_formatter.cpp  code_formatter.h
src/ui/: algorithm_input_dialog.cpp  algorithm_input_dialog.h  code_generator_dialog.cpp  code_generator_dialog.h  color_legend_panel.cpp  color_legend_panel.h  control_panel.cpp  control_panel.h  main_window.cpp  main_window.h  metrics_panel.cpp  metrics_panel.h  structure_selector.cpp  structure_selector.h  toolbox_panel.cpp  toolbox_panel.h  tutorial_overlay.cpp  tutorial_overlay.h  visualization_pane.cpp  visualization_pane.h
src/visualization/: CMakeLists.txt  GraphvizLayoutEngine.cpp  GraphvizLayoutEngine.h  animation_frame.cpp  animation_frame.h  frame_interpolator.h  interaction_manager.cpp  interaction_manager.h  playback_controller.cpp  playback_controller.h  visualization_renderer.cpp  visualization_renderer.h
src/visualization/animation/: animation_controller.cpp  animation_controller.h
src/visualization/graphviz/: graphviz_layout_engine.cpp  graphviz_layout_engine.h
src/visualization/rendering/: dot_renderer.cpp  dot_renderer.h  visualization_builder.cpp  visualization_builder.h
workspace/C2V_TEAM/DEV_1_FRONTEND/: README.md
workspace/TECH_LEAD/: README.md
(+26 files in other folders)
